--- a/src/UI/MainWindow.xaml
+++ b/src/UI/MainWindow.xaml
@@ -1,8 +1,76 @@
-﻿<Window x:Class="vanBrackel.UI.MainWindow"
+﻿<Window x:Class="vanBrackel.Rectangles.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:vm="clr-namespace:vanBrackel.Rectangles.UI.Model"
+        Title="Rectangles" 
+        Height="768" 
+        Width="1024">
+    <Window.Resources>
+        <Style TargetType="TextBox">
+            <Setter Property="Width" Value="50"></Setter>
+        </Style>
+    </Window.Resources>
+    <Window.DataContext>
+        <vm:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" Orientation="Horizontal" DataContext="{Binding Rectangle1}">
+                <Label>Rectangle 1:</Label>
+                <Label>Start X:</Label>
+                <TextBox IsEnabled="False" Text="{Binding StartingPoint.XCoordinate}"></TextBox>
+                <Label>Start Y:</Label>
+                <TextBox IsEnabled="False" Text="{Binding StartingPoint.YCoordinate}"></TextBox>
+                <Label>End X:</Label>
+                <TextBox IsEnabled="False" Text="{Binding EndingPoint.XCoordinate}"></TextBox>
+                <Label>End Y:</Label>
+                <TextBox IsEnabled="False" Text="{Binding EndingPoint.YCoordinate}"></TextBox>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" DataContext="{Binding Rectangle2}">
+                <Label>Rectangle 2:</Label>
+                <Label>Start X:</Label>
+                <TextBox IsEnabled="False" Text="{Binding StartingPoint.XCoordinate}"></TextBox>
+                <Label>Start Y:</Label>
+                <TextBox IsEnabled="False" Text="{Binding StartingPoint.YCoordinate}"></TextBox>
+                <Label>End X:</Label>
+                <TextBox IsEnabled="False" Text="{Binding EndingPoint.XCoordinate}"></TextBox>
+                <Label>End Y:</Label>
+                <TextBox IsEnabled="False" Text="{Binding EndingPoint.YCoordinate}"></TextBox>
+            </StackPanel>
+
+
+        </Grid>
+        <Canvas 
+            Grid.Row="1" 
+            Name="DrawingBoard" 
+            MouseMove="DrawingBoard_MouseMove" 
+            MouseLeftButtonDown="DrawingBoard_MouseLeftButtonDown"
+            Background="Gray" 
+            MouseLeftButtonUp="DrawingBoard_MouseLeftButtonUp" 
+            
+            >
+            
+            </Canvas>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <StatusBar Grid.Column="0" ItemsSource="{Binding StatusItems}" DisplayMemberPath="Message"></StatusBar>
+            <Button 
+                Grid.Column="1" 
+                Padding="10,2.5,10,2.5"
+                Command="{Binding ClearCommand}"
+                CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}">Clear</Button>
+        </Grid>
     </Grid>
 </Window>
